--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "dependencies": {
     "discord.js": "^14.16.3",
-    "redis": "^4.7.0"
+    "redis": "^4.7.0",
+    "unique-names-generator": "^4.7.1"
   }
 }
