--- a/.github/workflows/docker_deploy.yml
+++ b/.github/workflows/docker_deploy.yml
@@ -41,8 +41,8 @@ jobs:
       - name: Login to registry
         run: docker login -u ${{ secrets.DOCKER_LOGIN }} -p ${{ secrets.DOCKER_PASSWORD }} ${{ secrets.DOCKER_REGISTRY }}
       - name: Tag latest
-        run: docker tag cre8call ${{ secrets.DOCKER_REGISTRY }}/cre8call:latest
+        run: docker tag cre8call ${{ secrets.DOCKER_REGISTRY }}/floriantranier/cre8call:latest
       - name: Tag current version
-        run: docker tag cre8call ${{ secrets.DOCKER_REGISTRY }}/cre8call:$PACKAGE_VERSION
+        run: docker tag cre8call ${{ secrets.DOCKER_REGISTRY }}/floriantranier/cre8call:$PACKAGE_VERSION
       - name: Push
-        run: docker push --all-tags ${{ secrets.DOCKER_REGISTRY }}/cre8call
+        run: docker push --all-tags ${{ secrets.DOCKER_REGISTRY }}/floriantranier/cre8call
